--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,14 @@
             <version>5.15.0</version>
         </dependency>
 
+        <!-- SLF4J binding for Log4j (for logging) -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.17.2</version>
         </dependency>
 
+        <!-- Jackson Databind (for JSON serialization and deserialization) -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
